--- a/join_us.html
+++ b/join_us.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Article</title>
+  <title>Join Us</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
@@ -172,14 +172,14 @@
     </div>
 
     <!-- Carousel Wrapper -->
-    <div class="relative overflow-hidden">
+   <div class="mt-6">
       
       <!-- Scrollable Track -->
-      <div id="job-carousel" class="flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar w-full max-w-xl mx-auto relative">
+     <div id="job-carousel" class="flex flex-col gap-6 w-full max-w-6xl mx-auto">
 
         
         <!-- CARD 1 -->
-        <div class="job-card flex-none w-full snap-start bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left" data-category="Software">
+        <div class="job-card w-full max-w-4xl bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left" data-category="Software">
           <h3 class="text-lg font-semibold text-[#d1181e]">AI Engineer (Agent Behavior & Reinforcement Learning)</h3>
           <p class="text-sm text-gray-700 leading-relaxed">
             Orama Technologies is seeking a highly skilled and experienced AI Engineer specializing in Agent Behavior and Reinforcement Learning. This position demands deep expertise in autonomous agent architectures, a strong grasp of reinforcement learning principles and techniques, and proven ability to integrate complex AI systems like decision-making frameworks, behavior planning algorithms, multi-agent coordination, and optimized training pipelines. The ideal candidate is a proactive problem-solver and a dedicated builder, passionate about creating intelligent, adaptive, and believable AI agents for our XR simulation platforms.
@@ -190,7 +190,7 @@
         </div>
 
            <!-- CARD 2 -->
-        <div class="job-card flex-none w-full snap-start bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left" data-category="Software">
+        <div class="job-card w-full max-w-4xl bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left" data-category="Software">
           <h3 class="text-lg font-semibold text-[#d1181e]">AI Engineer (Computer Vision)</h3>
           <p class="text-sm text-gray-700 leading-relaxed">
             Orama Technologies is seeking a highly skilled and experienced AI Engineer specializing in Computer Vision. This position demands deep expertise in machine learning and computer vision algorithms, a strong grasp of deep learning frameworks and techniques, and proven ability to integrate complex AI systems like object detection, pose estimation, semantic segmentation, and optimized inference pipelines. The ideal candidate is a proactive problem-solver and a dedicated builder, passionate about creating high-performance, accurate, and computationally efficient AI solutions for our XR simulation platforms.
@@ -201,7 +201,7 @@
         </div>
 
     <!-- CARD 3 -->
-        <div class="job-card flex-none w-full  snap-start bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left" data-category="Hardware">
+        <div class="job-card w-full max-w-4xl bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left" data-category="Hardware">
           <h3 class="text-lg font-semibold text-[#d1181e]">AI Systems / Hardware Engineer</h3>
           <p class="text-sm text-gray-700 leading-relaxed">
             Orama Technologies is seeking a highly skilled and experienced AI Systems / Hardware Engineer. This position demands deep expertise in AI acceleration hardware, a strong grasp of systems architecture principles, and proven ability to integrate complex subsystems like neural network accelerators, edge computing platforms, custom ML hardware, and optimized inference engines. The ideal candidate is a proactive problem-solver and a dedicated builder, passionate about creating high-performance, efficient, and reliable AI hardware systems for our XR simulation platforms.
@@ -214,7 +214,7 @@
 
 
             <!-- CARD 4 -->
-        <div class="job-card flex-none w-full  snap-start bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left" data-category="Software">
+        <div class="job-card w-full max-w-4xl bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left" data-category="Software">
           <h3 class="text-lg font-semibold text-[#d1181e]">Computer Vision / SLAM Engineer</h3>
           <p class="text-sm text-gray-700 leading-relaxed">
             Orama Technologies is seeking a highly skilled and experienced Computer Vision / SLAM Engineer. This position demands deep expertise in computer vision algorithms, a strong grasp of SLAM principles and best practices, and proven ability to integrate complex subsystems like real-time tracking systems, sensor fusion pipelines, spatial mapping frameworks, and optimized data processing workflows. The ideal candidate is a proactive problem-solver and a dedicated builder, passionate about creating high-performance, stable, and precisely calibrated tracking systems on current and future XR hardware.
@@ -225,7 +225,7 @@
         </div>
 
     <!-- CARD 5 -->
-        <div class="job-card flex-none w-full snap-start bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left" data-category="Hardware">
+        <div class="job-card w-full max-w-4xl bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left" data-category="Hardware">
           <h3 class="text-lg font-semibold text-[#d1181e]">Embedded Systems Engineer (Hardware and Firmware)</h3>
           <p class="text-sm text-gray-700 leading-relaxed">
             Orama Technologies is seeking a highly skilled and experienced Embedded Systems Engineer. This position demands deep expertise in hardware design and firmware development, a strong grasp of embedded systems principles and best practices, and proven ability to integrate complex subsystems like sensor arrays, wireless communication modules, custom PCBs, and optimized low-level software. The ideal candidate is a proactive problem-solver and a dedicated builder, passionate about creating high-performance, stable, and power-efficient embedded solutions that enhance our XR simulation platforms.
@@ -237,7 +237,7 @@
         </div>
 
     <!-- CARD 6 -->
-        <div class="job-card flex-none w-full snap-start bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left"  data-category="Hardware">
+        <div class="job-card w-full max-w-4xl bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left"  data-category="Hardware">
           <h3 class="text-lg font-semibold text-[#d1181e]">Mechanical Design Engineer / CAD Designer (Metal & Carbon 3D Printing & Prototyping)</h3>
           <p class="text-sm text-gray-700 leading-relaxed">
             Orama Technologies is seeking a highly skilled and experienced Mechanical Design Engineer / CAD Designer with expertise in metal and carbon 3D printing. This position demands deep expertise in mechanical design, a strong grasp of advanced manufacturing techniques, and proven ability to integrate complex considerations like material properties, structural integrity, ergonomics, thermal management, and optimized production workflows. The ideal candidate is a proactive problem-solver and a dedicated builder, passionate about creating high-performance, durable, and precisely engineered hardware components for our XR simulation platforms.
@@ -249,7 +249,7 @@
         </div>
 
             <!-- CARD 7 -->
-        <div class="job-card flex-none w-full  snap-start bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left"  data-category="Software">
+        <div class="job-card w-full max-w-4xl bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left"  data-category="Software">
           <h3 class="text-lg font-semibold text-[#d1181e]">Senior XR / Unity Developer</h3>
           <p class="text-sm text-gray-700 leading-relaxed">
             Orama Technologies is seeking a highly skilled and experienced Senior XR / Unity Developer. This position demands deep expertise in Unity development, a strong grasp of XR principles and best practices, and proven ability to integrate complex subsystems like AI-driven behaviors, real-time data from custom hardware, advanced colocation systems, and optimized networked communication. The ideal candidate is a proactive problem-solver and a dedicated builder, passionate about creating high-performance, stable, and deeply immersive experiences on current and future XR hardware.
@@ -260,7 +260,7 @@
         </div>
 
             <!-- CARD 8 -->
-        <div class="job-card flex-none w-full  snap-start bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left"  data-category="Software">
+        <div class="job-card w-full max-w-4xl bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left"  data-category="Software">
           <h3 class="text-lg font-semibold text-[#d1181e]">Wireless Network Engineer (Mesh Networking)</h3>
           <p class="text-sm text-gray-700 leading-relaxed">
            Orama Technologies is seeking a highly skilled and experienced Wireless Network Engineer specializing in mesh networking. This position demands deep expertise in wireless communication systems, a strong grasp of mesh networking principles and best practices, and proven ability to integrate complex subsystems like ad-hoc network topologies, real-time data streaming, optimized radio configurations, and robust routing protocols. The ideal candidate is a proactive problem-solver and a dedicated builder, passionate about creating high-performance, stable, and resilient wireless networks for demanding XR applications.
@@ -273,35 +273,11 @@
 
       </div>
 
-      <!-- Left Arrow -->
-      <button id="prevBtn"
-              class="absolute left-0 top-1/2 -translate-y-1/2 bg-black text-white rounded-full w-10 h-10 shadow z-10 flex items-center justify-center">
-        ‹
-      </button>
-
-      <!-- Right Arrow -->
-      <button id="nextBtn"
-              class="absolute right-0 top-1/2 -translate-y-1/2 bg-black text-white rounded-full w-10 h-10 shadow z-10 flex items-center justify-center">
-        ›
-      </button>
     </div>
   </div>
 </section>
 
 <script>
-  const carousel = document.getElementById('job-carousel');
-  const prevBtn = document.getElementById('prevBtn');
-  const nextBtn = document.getElementById('nextBtn');
-
-  const scrollAmount = 400;
-
-  prevBtn.addEventListener('click', () => {
-    carousel.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
-  });
-
-  nextBtn.addEventListener('click', () => {
-    carousel.scrollBy({ left: scrollAmount, behavior: 'smooth' });
-  });
 
 const filterButtons = document.querySelectorAll('[data-filter]');
 const jobCards = document.querySelectorAll('.job-card');
@@ -328,10 +304,6 @@ filterButtons.forEach(button => {
   });
 });
 
-  // Optional: Auto-scroll
-  let autoScroll = setInterval(() => {
-    carousel.scrollBy({ left: 300, behavior: 'smooth' });
-  }, 6000);
 </script>
 
 <script>
