--- a/join_us.html
+++ b/join_us.html
@@ -165,10 +165,10 @@
 
     <!-- Filters -->
     <div class="flex justify-center flex-wrap gap-4">
-      <button class="px-4 py-2 rounded-full bg-[#d1181e] text-white text-sm"data-filter="All">All</button>
-      <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Hardware">Hardware</button>
-      <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Software">Software</button>
-      <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Internship">Internship</button>
+      <button class="px-4 py-2 rounded-full bg-[#d1181e] text-white text-sm"data-filter="All">All (9)</button>
+      <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Hardware">Hardware (3) </button>
+      <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Software">Software (5)</button>
+      <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Internship">Internship (1) </button>
     </div>
 
     <!-- Carousel Wrapper -->
@@ -268,12 +268,31 @@
              class="text-[#d1181e] font-medium hover:underline text-sm">Learn More →</a>
         </div>
 
+         <!-- CARD 9 -->
+        <div class="job-card w-full max-w-2xl bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left"  data-category="Internship">
+          <h3 class="text-lg font-semibold text-[#d1181e]">Internships</h3>
+          <p class="text-sm text-gray-700 leading-relaxed">
+           Orama Technologies is always looking for talented interns to join our team. If you're passionate about defense tech, AI, or XR simulation, send your resume to info@oramatech.ai. Internships are offered on a rolling basis across engineering, operations, and business roles.
+          </p>
+          <a a href="mailto:info@oramatech.ai"
+             class="text-[#d1181e] font-medium hover:underline text-sm">Send an email →</a>
+        </div>
+    
 
       </div>
 
     </div>
   </div>
 </section>
+
+      <!-- Another subheader -->
+    <div class="mt-12">
+      <h2 class="font-semibold mb-2">Equal Opportunity Employer</h2>
+      <p class="text-sm text-gray-700 leading-relaxed">
+       Orama Technologies is an Equal Opportunity Employer. We do not discriminate based on race, religion, color, national origin, gender, sexual orientation, gender identity, age, veteran status, disability status, or any other legally protected status.
+      </p>
+    </div>
+    
 
 <script>
 
