--- a/join_us.html
+++ b/join_us.html
@@ -165,10 +165,11 @@
 
     <!-- Filters -->
     <div class="flex justify-center flex-wrap gap-4">
-      <button class="px-4 py-2 rounded-full bg-[#d1181e] text-white text-sm"data-filter="All">All (9)</button>
+      <button class="px-4 py-2 rounded-full bg-[#d1181e] text-white text-sm"data-filter="All">All (10)</button>
       <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Hardware">Hardware (3) </button>
       <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Software">Software (5)</button>
       <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Internship">Internship (1) </button>
+      <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Internship">Tactical (1) </button>
     </div>
 
     <!-- Carousel Wrapper -->
@@ -272,11 +273,22 @@
         <div class="job-card w-full max-w-2xl bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left"  data-category="Internship">
           <h3 class="text-lg font-semibold text-[#d1181e]">Internships</h3>
           <p class="text-sm text-gray-700 leading-relaxed">
-           Orama Technologies is always looking for talented interns to join our team. If you're passionate about defense tech, AI, or XR simulation, send your resume to info@oramatech.ai. Internships are offered on a rolling basis across engineering, operations, and business roles.
+          Orama Technologies is always looking for talented interns to join our team. If you're passionate about defense tech, AI, or XR simulation, send your resume to info@oramatech.ai. Internships are offered on a rolling basis across engineering, operations, and business roles. We welcome international applicants and can provide support for CPT, OPT, or other visa sponsorship as needed.
           </p>
           <a a href="mailto:info@oramatech.ai"
              class="text-[#d1181e] font-medium hover:underline text-sm">Send an email →</a>
         </div>
+
+      <!-- CARD 9 -->
+        <div class="job-card w-full max-w-2xl bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left"  data-category="Tactical">
+          <h3 class="text-lg font-semibold text-[#d1181e]">Tactical Training Expert (Combat Experience Required)</h3>
+          <p class="text-sm text-gray-700 leading-relaxed">
+         Orama Technologies is seeking a Tactical Training Expert with real-world combat experience and a history of instructing elite units. You’ll help design and validate mixed-reality combat training while traveling to U.S. and allied military bases for hands-on exercises and feedback loops. 
+          </p>
+           <a a href="mailto:info@oramatech.ai"
+             class="text-[#d1181e] font-medium hover:underline text-sm">Send an email →</a>
+        </div>
+
     
 
       </div>
