--- a/join_us.html
+++ b/join_us.html
@@ -169,7 +169,7 @@
       <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Hardware">Hardware (3) </button>
       <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Software">Software (5)</button>
       <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Internship">Internship (1) </button>
-      <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Tectical">Tactical (1) </button>
+      <button class="px-4 py-2 rounded-full bg-gray-100 hover:bg-[#d1181e]/10 text-sm"data-filter="Tactical">Tactical (1) </button>
     </div>
 
     <!-- Carousel Wrapper -->
