--- a/join_us.html
+++ b/join_us.html
@@ -283,7 +283,22 @@
         <div class="job-card w-full max-w-2xl bg-white border-2 border-[#d1181e] rounded-xl shadow-lg p-6 space-y-4 text-left"  data-category="Tactical">
           <h3 class="text-lg font-semibold text-[#d1181e]">Tactical Training Expert (Combat Experience Required)</h3>
           <p class="text-sm text-gray-700 leading-relaxed">
-         Orama Technologies is seeking a Tactical Training Expert with real-world combat experience and a history of instructing elite units. You’ll help design and validate mixed-reality combat training while traveling to U.S. and allied military bases for hands-on exercises and feedback loops. 
+        Orama Technologies is seeking a Tactical Training Expert with real-world combat experience and a history of instructing elite units. You’ll help design and validate mixed-reality combat training while traveling to U.S. and allied military bases for hands-on exercises and feedback loops. 
+            <h3 class="text-lg font-semibold text-[#d1181e]">Requirements:</h3>
+  <ul class="list-disc pl-5 space-y-2 text-sm text-gray-800">
+    <li>
+      Combat experience required (military or law enforcement), Proven experience in CQB, live-fire, and/or force-on-force instruction
+    </li>
+    <li>
+      Certified instructor (e.g. SFAUC,MOUT/CQB, RSO, TCCC,POST Firearms, FBI/HRT, or private sector equivalents like TEES or Sig Sauer Academy)
+    </li>
+    <li>
+      Ability to translate tactics into clear, structured training feedback
+    </li>
+    <li>
+      This role includes frequent travel to U.S. and international military installations – US Citizens only
+    </li>
+  </ul>
           </p>
            <a a href="mailto:info@oramatech.ai"
              class="text-[#d1181e] font-medium hover:underline text-sm">Send an email →</a>
