--- a/leaderboard.html
+++ b/leaderboard.html
@@ -144,6 +144,9 @@
 
   <!-- Paragraph -->
   <p class="text-sm text-gray-700 leading-relaxed mb-8">
+    This leaderboard ranks trainees based on their overall average score. Each trainee’s overall score is the mean of all evaluated categories (each category scored 0–10 and weighted equally).
+
+In this group of trainees, the highest overall score is 7.7, the lowest is 5.1, with an average of 6.4 ± 0.48 (SD). Scores are anonymized using unique callsigns to maintain confidentiality.
  <a href="login.html" onclick="localStorage.setItem('oramaFromIndex', 'true')" class="text-red-600 hover:text-black transition font-medium inline-flex items-center gap-1">
             See an extended version of a current leaderboard →
           </a>
