--- a/leaderboard.html
+++ b/leaderboard.html
@@ -152,6 +152,16 @@ In this group of trainees, the highest overall score is 7.7, the lowest is 5.1, 
           </a>
   </p>
 
+  <div 
+  class="w-full max-w-7xl mx-auto my-12 rounded-xl overflow-hidden shadow-2xl border-4 border-[#d1181e] relative opacity-0 translate-y-8 transition-all duration-1000 ease-in-out scroll-fade"
+>
+  <img 
+    src="img/image_2025-10-01_154719837.png" 
+    alt="Leaderboard Banner" 
+    class="w-full h-auto object-cover"
+  />
+</div>
+
   <!-- Separator line with custom spacing -->
   <hr class="border-t border-gray-300 w-full max-w-xl mx-auto mt-6" />
 </div>
