--- a/leaderboard_extended.html
+++ b/leaderboard_extended.html
@@ -259,7 +259,7 @@ renderTable(fullData);
 }
 
 // Load & Init
-fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vTUwOrkdb1OLsa6hGdX_uKTZXGHYpsvwyAiuSsOTVoyrbaoAhNSCp74loZau9id2wwlwFz2XYxPlPea/pub?gid=0&single=true&output=csv')
+fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vTUwOrkdb1OLsa6hGdX_uKTZXGHYpsvwyAiuSsOTVoyrbaoAhNSCp74loZau9id2wwlwFz2XYxPlPea/pub?output=csv')
 .then(response => response.text())
 .then(csv => {
 fullData = csv.trim().split('\n').map(row => row.split(','));
