--- a/leaderboard_extended.html
+++ b/leaderboard_extended.html
@@ -154,8 +154,8 @@
 </div>
 
 <!-- Table -->
-<div class="overflow-x-auto overflow-y-auto max-h-[80vh] rounded-xl border border-[#d1181e] shadow-xl">
-  <table id="dataTable" class="min-w-full border-collapse text-sm">
+<div class="overflow-x-auto rounded-xl border border-[#d1181e] shadow-xl">
+  <table id="dataTable" class="min-w-max w-full border-collapse text-sm">
 <!-- Populated dynamically -->
 </table>
 </div>
