--- a/leaderboard_extended.html
+++ b/leaderboard_extended.html
@@ -126,6 +126,31 @@
   });
 </script>
 
+<div class="mt-16 text-center max-w-3xl mx-auto relative pb-12">
+  <!-- Centered heading -->
+  <h2 class="text-xl font-semibold mb-4">Information</h2>
+
+  <!-- Paragraph -->
+  <p class="text-sm text-gray-700 leading-relaxed mb-8">
+    This leaderboard ranks trainees based on their overall average score. Each trainee’s overall score is the mean of all evaluated categories (each category scored 0–10 and weighted equally).
+
+In this group of trainees, the highest overall score is 7.7, the lowest is 5.1, with an average of 6.4 ± 0.48 (SD). Scores are anonymized using unique callsigns to maintain confidentiality.
+ <a href="login.html" onclick="localStorage.setItem('oramaFromIndex', 'true')" class="text-red-600 hover:text-black transition font-medium inline-flex items-center gap-1">
+            See an extended version of a current leaderboard →
+          </a>
+  </p>
+
+  <div 
+  class="w-full max-w-7xl mx-auto my-12 rounded-xl overflow-hidden shadow-2xl border-4 border-[#d1181e] relative opacity-0 translate-y-8 transition-all duration-1000 ease-in-out scroll-fade"
+>
+  <img 
+    src="img/image_2025-10-01_154719837.png" 
+    alt="Leaderboard Banner" 
+    class="w-full h-auto object-cover"
+  />
+</div>
+
+
 <!-- GOOGLE TABLE SECTION -->
 <section class="bg-white py-6 px-6 border-gray-200 relative opacity-0 translate-y-8 transition-all duration-1000 ease-in-out scroll-fade">
 <!-- Loading Spinner -->
@@ -153,6 +178,7 @@
   </button>
 </div>
 
+  
 <!-- Table -->
 <div class="overflow-x-auto rounded-xl border border-[#d1181e] shadow-xl">
   <table id="dataTable" class="min-w-max w-full border-collapse text-sm">
