--- a/leaderboard.html
+++ b/leaderboard.html
@@ -139,28 +139,22 @@
 
 <!-- First subheader block with improved layout -->
 <div class="mt-16 text-center max-w-3xl mx-auto relative pb-12">
-  <!-- Centered heading -->
-  <h2 class="text-xl font-semibold mb-4">Information</h2>
 
   <!-- Paragraph -->
   <p class="text-sm text-gray-700 leading-relaxed mb-8">
-    This leaderboard ranks trainees based on their overall average score. Each trainee’s overall score is the mean of all evaluated categories (each category scored 0–10 and weighted equally).
+   This table extends the previous work by providing a detailed breakdown of scores across 11 sub-categories. It highlights both areas of highest proficiency and those requiring additional focus. Notably, Response to Explosive Ordinances has the lowest average score (~5.05).
 
-In this group of trainees, the highest overall score is 7.7, the lowest is 5.1, with an average of 6.4 ± 0.48 (SD). Scores are anonymized using unique callsigns to maintain confidentiality.
- <a href="login.html" onclick="localStorage.setItem('oramaFromIndex', 'true')" class="text-red-600 hover:text-black transition font-medium inline-flex items-center gap-1">
-            See an extended version of a current leaderboard →
-          </a>
+To enable a higher-level view, the sub-categories are grouped into three broader domains:
+	1.	Cognitive Proficiency — Awareness, target discrimination, and adaptability. These reduce surprise and poor decision-making, strongly influencing survival.
+	2.	Tactical Proficiency — Skills such as room entry, corner slicing, and use of cover, which directly affect exposure and engagement outcomes.
+	3.	Equipment Proficiency — Handling and reliability of equipment. While important, their impact can sometimes be mitigated by strong cognitive and tactical performance.
+
+An experimental weighting system is introduced, with cognitive proficiency weighted more heavily than equipment proficiency, reflecting its outsized influence on overall performance. The broader aim of this approach is to develop a rigorous mathematical framework that captures how different skills interact and correlate.
+
+Further updates and comprehensive analysis will be provided in an extended paper currently in preparation.
+
+ 
   </p>
-
-  <div 
-  class="w-full max-w-7xl mx-auto my-12 rounded-xl overflow-hidden shadow-2xl border-4 border-[#d1181e] relative opacity-0 translate-y-8 transition-all duration-1000 ease-in-out scroll-fade"
->
-  <img 
-    src="img/image_2025-10-01_154719837.png" 
-    alt="Leaderboard Banner" 
-    class="w-full h-auto object-cover"
-  />
-</div>
 
   <!-- Separator line with custom spacing -->
   <hr class="border-t border-gray-300 w-full max-w-xl mx-auto mt-6" />
