--- a/leaderboard_extended.html
+++ b/leaderboard_extended.html
@@ -139,15 +139,7 @@ To enable a higher-level view, the sub-categories are grouped into three broader
 
 An experimental weighting system is introduced, with cognitive proficiency weighted more heavily than equipment proficiency, reflecting its outsized influence on overall performance. The broader aim of this approach is to develop a rigorous mathematical framework that captures how different skills interact and correlate.
 
-Further updates and comprehensive analysis will be provided in an extended paper currently in preparation.
-  <div 
-  class="w-full max-w-7xl mx-auto my-12 rounded-xl overflow-hidden shadow-2xl border-4 border-[#d1181e] relative opacity-0 translate-y-8 transition-all duration-1000 ease-in-out scroll-fade"
->
-  <img 
-    src="img/image_2025-10-01_154719837.png" 
-    alt="Leaderboard Banner" 
-    class="w-full h-auto object-cover"
-  />
+Further updates and comprehensive analysis will be provided in an extended paper.
 </div>
 
 
