--- a/leaderboard_extended.html
+++ b/leaderboard_extended.html
@@ -153,7 +153,7 @@ Further updates and comprehensive analysis will be provided in an extended paper
 <!-- PapaParse (robust CSV parser) -->
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
-<div class="flex flex-wrap justify-center gap-4 items-center">
+<div class="flex flex-wrap justify-center gap-4 items-center mb-6">
   <!-- Tab (gid) selector -->
   <select id="tabSelect"
           class="border px-4 py-2 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-[#d1181e]">
