--- a/leaderboard_extended.html
+++ b/leaderboard_extended.html
@@ -172,8 +172,8 @@ Further updates and comprehensive analysis will be provided in an extended paper
 
   
 <!-- Table -->
-<div class="overflow-x-auto rounded-xl border border-[#d1181e] shadow-xl">
-  <table id="dataTable" class="min-w-max w-full border-collapse text-sm">
+<div class="rounded-xl border border-[#d1181e] shadow-xl">
+  <table id="dataTable" class="w-full border-collapse text-sm">
 <!-- Populated dynamically -->
 </table>
 </div>
