--- a/leaderboard_extended.html
+++ b/leaderboard_extended.html
@@ -173,7 +173,7 @@ Further updates and comprehensive analysis will be provided in an extended paper
   
 <!-- Table -->
 <div class="rounded-xl border border-[#d1181e] shadow-xl">
-  <table id="dataTable" class="w-full border-collapse text-sm">
+  <table id="dataTable" class="w-full table-fixed border-collapse text-sm">
 <!-- Populated dynamically -->
 </table>
 </div>
