--- a/leaderboard_extended.html
+++ b/leaderboard_extended.html
@@ -172,10 +172,19 @@ Further updates and comprehensive analysis will be provided in an extended paper
 
   
 <!-- Table -->
-<div class="rounded-xl border border-[#d1181e] shadow-xl">
-  <table id="dataTable" class="w-full table-fixed border-collapse text-sm">
-<!-- Populated dynamically -->
-</table>
+<div class="rounded-xl border border-[#d1181e] shadow-xl
+            overflow-x-auto md:overflow-x-visible
+            max-w-full">
+  <table id="dataTable"
+         class="w-full table-fixed md:table-auto border-collapse
+                text-xs sm:text-sm md:text-base">
+    <!-- Populated dynamically -->
+  </table>
+
+  <!-- Small “scroll” hint for phones -->
+  <div class="md:hidden text-[11px] text-gray-500 px-2 py-1">
+    Swipe → to see all columns
+  </div>
 </div>
 
 <!-- Pagination -->
@@ -254,8 +263,10 @@ function renderTable() {
   fullData[0].forEach((h, i) => {
     const th = document.createElement("th");
     th.textContent = h;
-    th.className =
-      "bg-black text-white px-6 py-3 text-left uppercase cursor-pointer";
+ 	th.className =
+  "bg-black text-white text-xs sm:text-sm md:text-base " +
+  "px-2 py-2 sm:px-4 sm:py-3 text-left uppercase cursor-pointer " +
+  "whitespace-normal break-words sticky top-0 z-10";
     th.addEventListener("click", () => sortBy(i));
     trh.appendChild(th);
   });
@@ -270,7 +281,9 @@ function renderTable() {
     row.forEach(cell => {
       const td = document.createElement("td");
       td.textContent = cell;
-      td.className = "px-6 py-4 border-t border-gray-200";
+      td.className =
+  "px-2 py-2 sm:px-4 sm:py-3 border-t border-gray-200 " +
+  "whitespace-normal break-words align-top";
       tr.appendChild(td);
     });
     tbody.appendChild(tr);
