--- a/leaderboard.html
+++ b/leaderboard.html
@@ -147,9 +147,13 @@
     This leaderboard ranks trainees based on their overall average score. Each trainee’s overall score is the mean of all evaluated categories (each category scored 0–10 and weighted equally).
 
 In this group of trainees, the highest overall score is 7.7, the lowest is 5.1, with an average of 6.4 ± 0.48 (SD). Scores are anonymized using unique callsigns to maintain confidentiality.
- <a href="login.html" onclick="localStorage.setItem('oramaFromIndex', 'true')" class="text-red-600 hover:text-black transition font-medium inline-flex items-center gap-1">
-            See an extended version of a current leaderboard →
-          </a>
+<a href="login.html"
+   onclick="localStorage.setItem('oramaFromIndex', 'true')"
+   class="inline-flex items-center gap-2 px-5 py-2 rounded-lg font-medium 
+          bg-[#d1181e] text-white hover:bg-black hover:text-white 
+          transition shadow-md">
+  See an extended version of the current leaderboard →
+</a>
   </p>
 
   <div 
