--- a/leaderboard.html
+++ b/leaderboard.html
@@ -143,18 +143,23 @@
   <h2 class="text-xl font-semibold mb-4">Information</h2>
 
   <!-- Paragraph -->
-  <p class="text-sm text-gray-700 leading-relaxed mb-8">
+<div class="text-sm text-gray-700 leading-relaxed mb-8 text-center max-w-3xl mx-auto">
+  <p>
     This leaderboard ranks trainees based on their overall average score. Each trainee’s overall score is the mean of all evaluated categories (each category scored 0–10 and weighted equally).
-
-In this group of trainees, the highest overall score is 7.7, the lowest is 5.1, with an average of 6.4 ± 0.48 (SD). Scores are anonymized using unique callsigns to maintain confidentiality.
-<a href="login.html"
-   onclick="localStorage.setItem('oramaFromIndex', 'true')"
-   class="inline-flex items-center gap-2 px-5 py-2 rounded-lg font-medium 
-          bg-[#d1181e] text-white hover:bg-black hover:text-white 
-          transition shadow-md">
-  See an extended version of the current leaderboard →
-</a>
   </p>
+  <p class="mt-2">
+    In this group of trainees, the highest overall score is <span class="font-semibold">7.7</span>, the lowest is <span class="font-semibold">5.1</span>, with an average of <span class="font-semibold">6.4 ± 0.48 (SD)</span>. Scores are anonymized using unique callsigns to maintain confidentiality.
+  </p>
+
+  <!-- Button -->
+  <a href="login.html"
+     onclick="localStorage.setItem('oramaFromIndex', 'true')"
+     class="inline-flex items-center gap-2 mt-6 px-6 py-3 rounded-full font-medium 
+            bg-[#d1181e] text-white shadow-lg hover:bg-black hover:shadow-xl 
+            transform hover:-translate-y-0.5 transition">
+    See an extended version of the current leaderboard →
+  </a>
+</div>
 
   <div 
   class="w-full max-w-7xl mx-auto my-12 rounded-xl overflow-hidden shadow-2xl border-4 border-[#d1181e] relative opacity-0 translate-y-8 transition-all duration-1000 ease-in-out scroll-fade"
