--- a/leaderboard_extended.html
+++ b/leaderboard_extended.html
@@ -200,6 +200,7 @@ const SHEET_ID = "1u-HwRbprndkBv0DiJUJ7oDBldWammVThTx5OzblztdM";
 /* List your tabs here: label + gid (from #gid=... in the URL).
    Add as many as you need. The first one loads by default. */
 const SHEETS = [
+	{ label: "Detailed Scores", gid: "95731814" },
   { label: "Cognitive Proficiency", gid: "0" },
   { label: "Tactical Proficiency",     gid: "822895727" },
   { label: "Equipment proficiency",     gid: "1750630092" },
