--- a/leaderboard_extended.html
+++ b/leaderboard_extended.html
@@ -171,20 +171,12 @@ Further updates and comprehensive analysis will be provided in an extended paper
 </div>
 
   
-<!-- Table -->
-<div class="rounded-xl border border-[#d1181e] shadow-xl
-            overflow-x-auto md:overflow-x-visible
-            max-w-full">
-  <table id="dataTable"
-         class="w-full table-fixed md:table-auto border-collapse
-                text-xs sm:text-sm md:text-base">
-    <!-- Populated dynamically -->
+<!-- Table wrapper -->
+<div class="rounded-xl border border-[#d1181e] shadow-xl overflow-x-auto max-w-full">
+  <table id="dataTable" class="min-w-max border-collapse text-sm">
+    <!-- populated dynamically -->
   </table>
-
-  <!-- Small “scroll” hint for phones -->
-  <div class="md:hidden text-[11px] text-gray-500 px-2 py-1">
-    Swipe → to see all columns
-  </div>
+  <div class="md:hidden text-[11px] text-gray-500 px-3 py-2">Swipe → to see more columns</div>
 </div>
 
 <!-- Pagination -->
